saveItem, deleteItem, findAll methods for Item were implemented and also items inside the categories can be seen when we fetch category